# L3MI

./: fiche_revision_assembleur_x86.md
Assembleur/: cpu_timer.cpp  cpu_timer.h  dot_product.cpp  dot_product_nasm.asm  fib.asm  fiche.txt  for_loop_sum_nasm.asm  hello_world_nasm.asm  if_then_else_v3_nasm.asm
Bases de données L3/: annales.sql  revision.sql  td3.sql  tp2_db.sql  tp3_db.sql  tp4_db.sql
Dev Web/cc-23-php-solution/data/: map.sql
Dev Web/cc-23-php-solution/exercice1/: Digraph.php
Dev Web/cc-23-php-solution/exercice2/: bdd_select.php  exercice2.php
Dev Web/cc-23-php-solution/exercice3/: bdd_insert.php  exercice3.php  xml.php
Dev Web/cc-23-php-solution/exercice4/: freemium.php
Dev Web/cc-23-php-sujet/data/: map.dtd
Dev Web/cc-23-php-sujet/exercice1/: Digraph.php
Dev Web/cc-23-php-sujet/exercice2/: bdd_select.php  exercice2.php
Dev Web/cc-23-php-sujet/exercice3/: bdd_insert.php  exercice3.php  xml.php
Dev Web/cc-23-php-sujet/exercice4/: freemium.php
Dev Web/cc-23-php-sujet/utils/: connexpdo.inc.php
Dev Web/php-8.3.12-nts-Win32-vs16-x86/: pharcommand.phar  php8embed.lib  snapshot.txt
Dev Web/tp-js-1-sujet/: country.js
Dev Web/tp-js-2-sujet/: puzzle.bak.html  puzzle.js
Dev Web/tp-js-3-sujet/: courbes.js  traceur.js  traceur_proto.js  échantillonneur.js  échantillonneur_proto.js
Dev Web/tp-js-4-sujet/: départements.js  régions.js  températures_anjou.js  utils.js
Dev Web/tp-php-1-sujet/tva/: afficher.php  (+1 more)
Dev Web/tp-php-2-sujet/: Employee.php  employee_display.php  employee_raise.php  employee_sort.php
Dev Web/tp-php-4-sujet/: afficher-modeles.php  connexpdo.inc.php  inserer-cartegrise.php  inserer-modele.php  test-connexion.php  voitures2.sql
POO/TP1/: 2_strings.cc  2_stringtoint.cc  CMakeLists.txt  main.cc  sequence (1).cc  sequence (1).hh  sequence.cc  sequence.hh  sequence2.cc  sequence2.hh
POO/TP2/: CMakeLists.txt  grille.cc  grille.hh  main.cc  main_vect.cc  sequence.cc  sequence.hh  sequence_2.cc  sequence_2.hh  tailleposition.cc  tailleposition.hh
POO/TP2_test/: CMakeLists.txt  main.cc  main_grille.cc  main_vect.cc  sequence.cc  sequence.hh  sequence_2.cc  sequence_2.hh
POO/TP3/: CMakeLists.txt  element.hh  tailleposition.cc  tailleposition.hh
POO/TP4/: CMakeLists.txt  main.cc
POO/TP5/: affichage.cc  affichage.hh  banque.cc  banque.hh  compte.cc  compte.hh  echiquier.cc  echiquier.hh  entites.cc  entites.hh  explosions.cc  explosions.hh  jeu.cc  jeu.hh  main.cc  main2.cc  mobiles.cc  mobiles.hh  pieces.cc  pieces.hh  plateau.cc  plateau.hh  position.cc  position.hh  proprietaire.cc  proprietaire.hh
POO/TP6_poo/: CMakeLists.txt  CMakeLists.txt.user.2132931  array.cpp  array.h  main.cpp
POO/TP7/: CMakeLists.txt  ensemble.hh  main.cc  main2.cc  pacman.cc  pacman.hh
POO/TP7 provisoire/: CMakeLists.txt  pacman.hh
POO/cc2/: CMakeLists.txt  CMakeLists.txt.user.ccffbdd  jeu.cpp  jeu.h  taillepos.cc  taillepos.hh
POO/cc2324/: CMakeLists.txt  snake.cc  snake.hh
POO/cc2425a/: base.cc  base.hh  horaire.cc  horaire.hh  message.cc  message.hh
POO/cc2425b/: CMakeLists.txt  breakout.cc  breakout.hh  main.cc  taillepos.cc  taillepos.hh
POO/cc_2324/: CMakeLists.txt  main.cc  snake.cc  snake.hh
POO/entrainement/annale/: CMakeLists.txt  billet.cpp  billet.h
POO/tp8/: CMakeLists.txt  calcul.hh  calculatrice.cc  calculatrice.hh  main.cc  sequence.cc  sequence.hh  simon.cc  simon.hh
POO/tp8_correct/: CMakeLists.txt  simon.cc  simon.hh
Prog Fonctionnelle/: entrainement.ml
Prog Fonctionnelle/TP1/: #Fibonacci.ml#  Fibonacci.ml  bissextile.ml  minToMaj.ml  minuscule.ml  moyenne.ml  newton.ml  puissance_4.ml  quotientReste.ml  rond.ml  sigma.ml  tva.ml
Prog Fonctionnelle/TP2/: #exo1#  exo1  exo2  exo2.ml
Prog Fonctionnelle/TP3/: exo1.ml
Prog Fonctionnelle/projet/: projet.ml
Projet cyber/: README.md  analyzer.py  config_manager.py  log_manager.py  main.py  requirements.txt  results_manager.py  scanner.py  test_analyzer.py  ui_components.py  v2.py  xss_report.json
Python machine learning/: diabetes_test_data.csv  diabetes_test_target.csv  td3.py
Python machine learning/Sources TP3-20250303/: digits_entries_test.csv  digits_target_test.csv  digits_train.csv  tp3.py  tp4.py
Python machine learning/starting_k/: challenge.py  challenge_new - Copie.py  challenge_new.py  dataloader_Pytorch.py  images_test_predictions.csv  rapport.txt  reg_loss_torch_plus_haut_niveau.py  script_knn(2).py  script_regression_logistique_multiclasse_pytorch.py
Systèmes intelligent/: MCTS.cpp  MCTS.h  STRUCTURES DE DONNÉES UTILISÉES.txt  jeu.h  main.cpp  mcts_test.cpp  test.cpp
Systèmes intelligent/DISTRIBUTION/: CMakeCache.txt
Systèmes intelligent/mcts/: CMakeLists.txt  MCTS.cpp  MCTS.h  main.cc  main.cpp
Theorie des langages/Exemples Resultats/: exemple1.html  exemple2.html  exemple3.html  exemple4.html  exemple5.html  exemple6.html  exemple7.html
Theorie des langages/Exemples SRC/: exemple2.src  exemple5.src  exemple6 - Copie.txt  exemple6.src
Theorie des langages/bison_base/: parser.yy  scanner.ll
Theorie des langages/projetSRC/: CMakeLists.txt  README.md  bloc.h  contexte.h  driver.h  image.h  output.html  paragraphe.h  parser test  parsertest.yy  scannertest.ll  sortie.html  titre.h
Theorie des langages/theorie langage/: scanner.hh  scanner.ll
Traitement/Annales/: exercice1.txt.txt  exercice2.sh  exercice3.R  exercice3.py  function.awk  test_latin1.txt
Traitement/Annales2/: dataairplqualiteairangers.csv  exercice3bis.R  exercice3bis.py  function.awk
Traitement/TP1/: conversion.cpp  text.ascii.txt  text.latin1.txt  text.multi.txt  text.utf8.txt  traiter.cpp
Traitement/TP2/: bienFormate.txt  checkAge.awk  data1.csv  data2.csv  data3.csv  data4.csv  fichier.txt  fusion.sh  malFormate.txt  noms_prenoms1.txt  noms_prenoms2.txt  noms_prenoms3.txt  tailleRepertoire.awk  tri1.awk  tri2.awk  utf8_data2.csv  utf8_data3.csv
Traitement/TP3/: elf1.txt  tp3_1.R
Traitement/TP4/: arbitre.py  officiels.csv
Traitement/TP5/: eleves.tsv
autre/: arretedementir.py  erreur.txt  script.py
autre/projetSRC/: CMakeLists.txt
(+320 files in other folders)
